# dfs-prophet

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  showcase_binary_quantization.sh  showcase_multi_vector_search.sh  showcase_search_demo.sh
.github/workflows/: ci.yml
docs/: ADVANCED_SEARCH.md  INTEGRATION_TESTING.md  MULTI_VECTOR_API.md  MULTI_VECTOR_CONFIG.md  MULTI_VECTOR_HEALTH.md  PLAYER_PROFILE_ANALYTICS.md  api_examples.md  multi_vector_guide.md  vector_types.md
examples/: multi_vector_demo.py
scripts/: __init__.py  cleanup.sh  example_api_usage.py  generate_synthetic_data.py  security_check.sh  setup_demo_data.py  test_health_endpoints.sh
src/dfs_prophet/: __init__.py  cli.py  config.py  main.py
src/dfs_prophet/analytics/: __init__.py  profile_analyzer.py
src/dfs_prophet/api/: __init__.py
src/dfs_prophet/api/routes/: __init__.py  health.py  players.py
src/dfs_prophet/core/: __init__.py  embedding_generator.py  vector_engine.py
src/dfs_prophet/data/: __init__.py
src/dfs_prophet/data/collectors/: __init__.py  nfl_collector.py
src/dfs_prophet/data/models/: __init__.py  player.py
src/dfs_prophet/monitoring/: __init__.py  vector_performance.py
src/dfs_prophet/search/: __init__.py  advanced_search.py
src/dfs_prophet/utils/: __init__.py  logger.py
tests/: conftest.py  test_multi_vector.py  test_multi_vector_basic.py
